<resources>
    <string name="app_name">MDT Home Assignment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="register">Register</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="balance_label">You have</string>
    <string name="account_no">Account No</string>
    <string name="account_holder">Account Holder</string>
    <string name="sgd">"SGD"</string>
    <string name="transaction_history">Your Transaction History</string>
    <string name="make_transfer">Make Transfer</string>
    <string name="transfer">Transfer</string>
    <string name="payee">Payee</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="transfer_now">Transfer Now</string>
</resources>